crates/kaban-parser/tests/snapshots/expressions__generic_instantiation_function.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo@<i32>(10);

Block [
    FuncCall {
        callee: GenericInstantiation {
            callee: Identifier("foo"),
            args: [
                Type(I32),
            ],
        },
        args: [
            IntLit("10"),
        ],
    },
]
