crates/kaban-parser/tests/snapshots/expressions__identifier_assignment_with_binary_operation.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x = 10 + 5;

Block [
    Assignment {
        left: Identifier("x"),
        right: Add {
            left: IntLit("10"),
            right: IntLit("5"),
        },
    },
]
