crates/kaban-parser/tests/snapshots/expressions__if_expression_else_condition_and_braces_and_multiple_expressions.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: if (x == 10) { foo(); buzz(); } else { bazz(); }

Block [
    IfExpression {
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
        then: Block [
            FuncCall {
                callee: Identifier("foo"),
                args: [],
            },
            FuncCall {
                callee: Identifier("buzz"),
                args: [],
            },
        ],
        else: Block [
            FuncCall {
                callee: Identifier("bazz"),
                args: [],
            },
        ],
    },
]
