crates/kaban-parser/tests/snapshots/expressions__if_expression_else_condition_without_braces.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: if (x == 10) foo(); else bazz();

Block [
    ExpressionStatement(
        IfExpression {
            condition: Equal {
                left: Identifier("x"),
                right: IntLit("10"),
            },
            then: ExpressionStatement(
                FuncCall {
                    callee: Identifier("foo"),
                    args: [],
                },
            ),
            else: ExpressionStatement(
                FuncCall {
                    callee: Identifier("bazz"),
                    args: [],
                },
            ),
        },
    ),
]
