crates/kaban-parser/tests/snapshots/expressions__if_expression_return.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: if (x == 10) return;

Block [
    IfExpression {
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
        then: Return,
    },
]
