crates/kaban-parser/tests/snapshots/expressions__if_expression_return_with_value.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: if (x == 10) return x(x);

Block [
    IfExpression {
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
        then: Return(
            FuncCall {
                callee: Identifier("x"),
                args: [
                    Identifier("x"),
                ],
            },
        ),
    },
]
